--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             <p class="desc">Widget for OBS Studio that displays player ELO, average stats etc. on your stream!</p>
         </div>
     </a>
-    <small>Copyright &copy; <a href="https://mxgic1337.xyz">mxgic1337_</a> 2024</small>
+    <small>Copyright &copy; <a href="https://mxgic1337.xyz">mxgic1337_</a> 2024-2025</small>
     <small>Not affiliated with <a href="https://faceit.com">FACEIT</a> and/or <a href="https://streamelements.com">StreamElements</a>.</small>
 </main>
 </body>
