style: formatted code

--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,44 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="FACEIT tools for your stream!">
-    <meta name="keywords" content="faceit, faceit api, faceit widget, widget, faceit elo widget, faceit streamelements stats">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="FACEIT tools for your stream!" />
+    <meta
+      name="keywords"
+      content="faceit, faceit api, faceit widget, widget, faceit elo widget, faceit streamelements stats"
+    />
     <title>fc.mxgic1337.xyz</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<main>
-    <h1>Hello!</h1>
-    <p>Which tool are you looking for?</p>
-    <a href="https://github.com/mxgic1337/faceit-se-api#readme">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <h1>Hello!</h1>
+      <p>Which tool are you looking for?</p>
+      <a href="https://github.com/mxgic1337/faceit-se-api#readme">
         <div class="project">
-            <p class="name">FACEIT StreamElements API</p>
-            <p class="desc">API for StreamElements that displays player stats in chat.</p>
+          <p class="name">FACEIT StreamElements API</p>
+          <p class="desc">
+            API for StreamElements that displays player stats in chat.
+          </p>
         </div>
-    </a>
-    <a href="https://fc.mxgic1337.xyz/widget/generator">
+      </a>
+      <a href="https://fc.mxgic1337.xyz/widget/generator">
         <div class="project">
-            <p class="name">FACEIT Stats Widget</p>
-            <p class="desc">Widget for OBS Studio that displays player ELO, average stats etc. on your stream!</p>
+          <p class="name">FACEIT Stats Widget</p>
+          <p class="desc">
+            Widget for OBS Studio that displays player ELO, average stats etc.
+            on your stream!
+          </p>
         </div>
-    </a>
-    <small>Copyright &copy; <a href="https://mxgic1337.xyz">mxgic1337_</a> 2024-2025</small>
-    <small>Not affiliated with <a href="https://faceit.com">FACEIT</a> and/or <a href="https://streamelements.com">StreamElements</a>.</small>
-</main>
-</body>
+      </a>
+      <small
+        >Copyright &copy;
+        <a href="https://mxgic1337.xyz">mxgic1337_</a> 2024-2025</small
+      >
+      <small
+        >Not affiliated with <a href="https://faceit.com">FACEIT</a> and/or
+        <a href="https://streamelements.com">StreamElements</a>.</small
+      >
+    </main>
+  </body>
 </html>
